correção da rota parent
